# soar

./: .gitignore  .gitmodules  README.md  fetch_data.sh  pyproject.toml  setup.py
.dev/: pre-commit
preproc/: compute_kp_and_mask.py  compute_normal.py  compute_prompt.py  compute_smplx.py  compute_smplx_zju.py  debug.pth  debug.py  extract_frames.py  preprocess_custom.py  utils.py
preproc/keypoint_mapping/: __init__.py  dwpose.py
scripts/: run_016.sh  run_2795752.sh  run_454.sh  run_4540332.sh  run_CUSTOM.sh  run_bike.sh  run_dance_0.sh
soar/: rendering.py
soar/threestudio-soar/: .gitignore  README.md  __init__.py  basic.py
soar/threestudio-soar/background/: gaussian_mvdream_background.py
soar/threestudio-soar/configs/: gaussiandreamer_mvdream.yaml  gaussiansurfel_imagedream_recon.yaml  gaussiansurfel_imagedream_recon_normal.yaml  gaussiansurfel_imagedream_s0 copy.yaml  gaussiansurfel_imagedream_s0.yaml  gaussiansurfel_imagedream_s0_fs.yaml  gaussiansurfel_imagedream_s0_zju.yaml  gaussiansurfel_imagedream_s1 copy.yaml  gaussiansurfel_imagedream_s1.yaml  gaussiansurfel_imagedream_s1_fs.yaml  gaussiansurfel_imagedream_s1_zju.yaml  gaussiansurfel_mvdream.yaml  gaussiansurfel_mvdream_color.yaml  gaussiansurfel_mvdream_normal.yaml
soar/threestudio-soar/data/: uncond_multiview.py  uncond_multiview_bk.py
soar/threestudio-soar/geometry/: exporter.py  gaussian_base.py  gaussian_io.py  mesh_utils.py  sdf_fields.py  surfel_base.py
soar/threestudio-soar/guidance/: imagedream_guidance.py  mvdream_guidance.py
soar/threestudio-soar/model/: modules.py  network.py
soar/threestudio-soar/renderer/: diff_gaussian_rasterizer.py  (+3 more)
submodules/diff-gaussian-rasterization/: rasterize_points.cu  rasterize_points.h
submodules/econ/: requirements.txt
(+41 files in other folders)
