[build-system]
requires = ["setuptools==65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "soar"
version = "0.0.0"
authors = []
requires-python = ">=3.10"
dependencies = [
  "opencv-python",
  "imageio",
  "imageio-ffmpeg",
  "tyro",
  "viser",
  "nerfview",
  "roma",
  "yacs",
  "libigl",
  "envlight",
  "torch",
  "torchvision",
  "pytorch_lightning",
  "einops",
  "omegaconf",
  "controlnet_aux",
  "diffusers",
  "transformers",
  "nerfacc",
  "matplotlib",
  "transforms3d",
  "open3d",
  "wandb",
  "pymcubes",
  "nerfstudio",
  "ninja",
  "lpips",
  "mvdream @ git+https://github.com/bytedance/MVDream",
  "imagedream @ git+https://github.com/bytedance/ImageDream/#subdirectory=extern/ImageDream",
  "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast/",
  "tinycudann @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch",
  "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git",
  "xformers",
  "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "ipdb"]

[tool.setuptools.packages.find]
include = ["soar"]

[tool.isort]
profile = "black"
